Fix text alignment

--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -464,6 +464,7 @@ figure.highlight
 
     .highlight-body
         overflow: auto
+        text-align: left
 
     .gutter
         text-align: right
